Bug fixes and more API integration
Fixed:
- Services hidden by next button in provider screen
- Get providers by service
- Provider picture not cropped (too big)

--- a/scss/book/book.styles.scss
+++ b/scss/book/book.styles.scss
@@ -306,28 +306,8 @@ $slider-radius: 26px;
  * Book provider
  */
 
-.add-to-cart-popup, .book-provider {
-  .popup {
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    top: 0;
-    left:0;
-    background-color: #FFF;
-    border-radius: 4px;
-    position: relative;
-    @include border-radius(0px);
-  }
-
-  .popup-head {
-    padding: 0px;
-    height: 60px; 
-    border: 0;
-  }
-  .popup-title {
-    color: $theme-color-2;
-  }
+.book-provider {
+  margin-bottom: 50px;
  .title-image  {
     margin-top: 14px;
     height: 16px;
@@ -357,16 +337,22 @@ $slider-radius: 26px;
     white-space: normal;
     margin: 7px 0;
   }
-  .popup-body {
-    padding: 0;
-    .list.card {
-      margin: 0;
-      .item-image {
-          max-height: 200px;
-          @include border-radius(0px);
+
+  .list.card {
+    margin: 0;
+    .item-image {
+      height: 250px;
+      @include border-radius(0px);
+      img {
+        position: absolute;
+        margin: auto;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
       }
     }
-  } 
+  }
   .list.card {
     margin: 0;
   }
